menu cards done for farmers,items,sales

--- a/Public/Items/delete.html
+++ b/Public/Items/delete.html
@@ -54,6 +54,14 @@
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
+                       
+                      
+                        <li class="nav-item">
+                            <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
