--- a/Public/Items/update.html
+++ b/Public/Items/update.html
@@ -51,10 +51,19 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="./index.html" class="nav-link text-white text-center">
+                            <a href="../index.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
+                       
+                       <li class="nav-item">
+                            <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
+
+
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
@@ -97,8 +106,8 @@
                         <div class="mb-3 row">
                             <label class="col-sm-4 col-form-label">ItemName</label>
                             <div class="col-sm-8">
-                                <input name="ItemName" type="text" id="ItemNameId" class="form-control" required autocomplete="off"
-                                    autofocus>
+                                <input name="ItemName" type="text" id="ItemNameId" class="form-control" required
+                                    autocomplete="off" autofocus>
                                 <div class="invalid-feedback">
                                     ItemName should not be empty!
                                 </div>
