--- a/Public/Sales/show.html
+++ b/Public/Sales/show.html
@@ -50,10 +50,19 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="./index.html" class="nav-link text-white text-center">
+                            <a href="../index.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
+                        
+                       
+                       <li class="nav-item">
+                            <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
