--- a/Public/Farmers/update.html
+++ b/Public/Farmers/update.html
@@ -51,11 +51,17 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="./index.html" class="nav-link text-white text-center">
+                            <a href="../index.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
-                    
+                        <li class="nav-item">
+                            <a href="./Farmers.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
                                 <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
@@ -93,12 +99,12 @@
         <div class="container mt-5">
             <div class="card">
                 <div class="card-body">
-                   <form onsubmit="return false" id="FormId">
+                    <form onsubmit="return false" id="FormId">
                         <div class="mb-3 row">
                             <label class="col-sm-4 col-form-label">FarmerName</label>
                             <div class="col-sm-8">
-                                <input name="FarmerName" type="text" id="FarmerNameId" class="form-control" required autocomplete="off"
-                                    autofocus>
+                                <input name="FarmerName" type="text" id="FarmerNameId" class="form-control" required
+                                    autocomplete="off" autofocus>
                                 <div class="invalid-feedback">
                                     FarmerName should not be empty!
                                 </div>
@@ -108,8 +114,8 @@
                         <div class="mb-3 row">
                             <label class="col-sm-4 col-form-label">FarmerMobile</label>
                             <div class="col-sm-8">
-                                <input name="FarmerMobile" type="tel" id="FarmerMobileId" class="form-control" pattern="[0-9]{10}"
-                                    maxlength="10" required>
+                                <input name="FarmerMobile" type="tel" id="FarmerMobileId" class="form-control"
+                                    pattern="[0-9]{10}" maxlength="10" required>
                                 <div class="invalid-feedback">
                                     Please enter a valid 10-digit FarmerMobile number!
                                 </div>
@@ -140,7 +146,7 @@
                             <button id="SaveButtonId" class="btn btn-primary px-4 RefreshBSTableClass">Create</button>
                         </div>
                     </form>
-                   
+
                 </div>
             </div>
 
