--- a/Public/Sales/Sales.html
+++ b/Public/Sales/Sales.html
@@ -48,10 +48,19 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="./index.html" class="nav-link text-white text-center">
+                            <a href="../index.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1"
+                                    style="font-size: 1.5rem; "></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
@@ -91,12 +100,12 @@
                 <div class="row justify-content-center g-5">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
-                            <div class="card-header bg-gradient bg-info text-white text-center rounded-top-4">
+                            <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
                                 <h4 class="mb-0"><i class="bi bi-card-text"></i>Sales</h4>
                             </div>
                             <div class="card-body text-center">
                                 <div class="dropdown">
-                                    <button class="btn btn-outline-info btn-lg dropdown-toggle w-75" type="button"
+                                    <button class="btn btn-outline-primary btn-lg dropdown-toggle w-75" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false" id="contentDropdownBtn">
                                         Select File
                                     </button>
