--- a/Public/index.html
+++ b/Public/index.html
@@ -1,30 +1,156 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/headers/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/headers/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/footers/">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link href="../headers.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- <script src="./assets/js/color-modes.js"></script> -->
+    <!-- <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <button onclick="getData()">Create File named Tasks</button>
-    <script>
-        async function getData() {
-            const url = "FileAsArray/Create/Tasks";
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`Response status: ${response.status}`);
-                }
+   <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                KeshavSoft
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+                aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                const json = await response.text();
-                console.log(json);
-            } catch (error) {
-                console.error(error.message);
-            };
-        };
-    </script>
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./index.html"><i class="bi bi-house-door me-1"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./sales/Sales.html"><i class="bi bi-bar-chart-line me-1"></i> Sales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Farmers/Farmers.html"><i class="bi bi-person-bounding-box me-1"></i> Farmers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Items/Items.html"><i class="bi bi-box-seam me-1"></i> Items</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+   <main>
+    <section class="py-5 mt-5">
+        <div class="container">
+            <div class="row justify-content-center g-4">
+                <!-- Sales Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-4">
+                        <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
+                            <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> Sales</h4>
+                        </div>
+                        <div class="card-body text-center">
+                           <a href="./sales/Sales.html" class="btn btn-outline-primary btn-lg w-75">Select File</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Farmers Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-4">
+                        <div class="card-header bg-gradient bg-success text-white text-center rounded-top-4">
+                            <h4 class="mb-0"><i class="bi bi-person-bounding-box"></i> Farmers</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="./Farmers/Farmers.html" class="btn btn-outline-success btn-lg w-75">Select File</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Items Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-4">
+                        <div class="card-header bg-gradient bg-warning text-dark text-center rounded-top-4">
+                            <h4 class="mb-0"><i class="bi bi-box-seam"></i> Items</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="./Items/Items.html" class="btn btn-outline-warning btn-lg w-75">Select File</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+
+
+    <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
+        <div class="container py-4 d-flex flex-wrap justify-content-between align-items-center">
+            <div class="col-md-4 d-flex align-items-center mb-3 mb-md-0">
+                <a href="/" class="me-2 text-dark text-decoration-none lh-1" aria-label="Bootstrap">
+                    <i class="bi bi-bootstrap" style="font-size: 1.5rem;"></i>
+                </a>
+                <span>&copy; 2025 <a href="https://keshavsoft.com"
+                        style="text-decoration: none; color: black; font-weight: 500;"> KeshavSoft</a>, Inc</span>
+            </div>
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex mb-0">
+                <li class="ms-3">
+                    <a class="text-dark" href="#" aria-label="Instagram">
+                        <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+                    </a>
+                </li>
+                <li class="ms-3">
+                    <a class="text-dark" href="#" aria-label="Facebook">
+                        <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js "
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r "
+        crossorigin="anonymous "></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js "
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+ "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11 "></script>
+
+    <script type="module " src="../Js/FileCreate/entryFile.js "></script>
 </body>
 
 </html>
