--- a/public/V1/Farmers/Farmers.html
+++ b/public/V1/Farmers/Farmers.html
@@ -54,7 +54,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="./Farmers.html" class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="../index.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem; "></i>
                                 <span>Parent</span>
                             </a>
