footer of farmer

--- a/public/V2/Farmers/crud.html
+++ b/public/V2/Farmers/crud.html
@@ -138,7 +138,7 @@
                                     </th>
                                     <th>
                                         <div class="input-group">
-                                            <input class="form-control" id="TableFooterItemCategoryInputId" type="text"
+                                            <input class="form-control" id="TableFooterItemCategoryInputId" type="number"
                                                 placeholder="Enter FarmerMobile">
                                             <div class="invalid-feedback">
                                                 Please provide correct Mobile.
