--- a/public/V2/Farmers/alter.html
+++ b/public/V2/Farmers/alter.html
@@ -51,7 +51,7 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="../Farmers/Farmers.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -65,32 +65,56 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                                <i class="bi bi-plus-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./crud.html">
+                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert Footer
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                                <i class="bi bi-eye-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link bg-warning text-dark rounded text-center" href="./Alter.html">
+                                <i class="bi bi-pencil-square text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link text-white text-center" href="./Delete.html">
+                                <i class="bi bi-x-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
+
 
                     </ul>
                 </div>
             </div>
         </div>
+
+        
+                <div class="px-5 mt-5"> 
+                    <h2 class="mb-2 fw-bold">Dashboard</h2>
+
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb mb-4">
+                            <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                            <li class="breadcrumb-item"><a href="#">Alter</a></li>
+                    </nav>
+                </div>
+
 
     </header>
     <main>
