--- a/public/V2/Farmers/delete.html
+++ b/public/V2/Farmers/delete.html
@@ -41,17 +41,18 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
-        
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
+
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="../Farmers/Farmers.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -63,26 +64,38 @@
                             </a>
                         </li>
 
+
+                        <a class="nav-link text-white text-center" href="./Create.html">
+                            <i class="bi bi-plus-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                            Insert
+                        </a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                                <i class="bi bi-building-add text-white d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
+                                Insert Footer
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                                <i class="bi bi-eye-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link text-white text-center" href="./Alter.html">
+                                <i class="bi bi-pencil-square text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link bg-danger text-dark rounded text-center" href="./Delete.html">
+                                <i class="bi bi-x-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -90,6 +103,16 @@
                     </ul>
                 </div>
             </div>
+        </div>
+
+        <div class="px-5 mt-5">
+            <h2 class="mb-2 fw-bold">Dashboard</h2>
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Delete</a></li>
+            </nav>
         </div>
 
     </header>
