--- a/public/V2/Farmers/delete.html
+++ b/public/V2/Farmers/delete.html
@@ -73,8 +73,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-building-add text-white d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert Footer
                             </a>
                         </li>
@@ -95,7 +94,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link bg-danger text-dark rounded text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -105,15 +104,9 @@
             </div>
         </div>
 
-        <div class="px-5 mt-5">
-            <h2 class="mb-2 fw-bold">Dashboard</h2>
 
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Delete</a></li>
-            </nav>
-        </div>
+
+
 
     </header>
     <main>
@@ -131,6 +124,11 @@
             </a>
         </div>
         <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Delete</a></li>
+            </nav>
             <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
