--- a/public/V2/Farmers/alter.html
+++ b/public/V2/Farmers/alter.html
@@ -41,13 +41,14 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
@@ -65,7 +66,8 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-plus-circle-fill text-white d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
@@ -93,7 +95,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -104,16 +106,16 @@
             </div>
         </div>
 
-        
-                <div class="px-5 mt-5"> 
-                    <h2 class="mb-2 fw-bold">Dashboard</h2>
 
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                            <li class="breadcrumb-item"><a href="#">Alter</a></li>
-                    </nav>
-                </div>
+        <div class="px-5 mt-5">
+            <h2 class="mb-2 fw-bold">Dashboard</h2>
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Alter</a></li>
+            </nav>
+        </div>
 
 
     </header>
