--- a/public/V2/Farmers/create.html
+++ b/public/V2/Farmers/create.html
@@ -77,8 +77,7 @@
                         <!-- Insert Footer -->
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-white d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert Footer
                             </a>
                         </li>
@@ -102,7 +101,7 @@
                         <!-- Delete -->
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
