--- a/public/V2/Farmers/show.html
+++ b/public/V2/Farmers/show.html
@@ -111,7 +111,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-white text-center @@if (context.page === 'delete') { active }"
                                 href="./Delete.html">
-                                <i class="bi bi-x-circle-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
