--- a/public/V2/Farmers/update.html
+++ b/public/V2/Farmers/update.html
@@ -41,88 +41,96 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
-    <!-- Home -->
-    <li>
-        <a href="../Farmers/Farmers.html" class="nav-link text-white text-center @@if (context.page === 'home') { active }">
-            <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i>
-            Home
-        </a>
-    </li>
+                        <!-- Home -->
+                        <li>
+                            <a href="../Farmers/Farmers.html"
+                                class="nav-link text-white text-center @@if (context.page === 'home') { active }">
+                                <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Home
+                            </a>
+                        </li>
 
-    <!-- Parent -->
-    <li class="nav-item">
-        <a href="./Farmers.html" class="nav-link text-white d-flex flex-column align-items-center @@if (context.page === 'parent') { active }">
-            <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
-            <span>Parent</span>
-        </a>
-    </li>
+                        <!-- Parent -->
+                        <li class="nav-item">
+                            <a href="./Farmers.html"
+                                class="nav-link text-white d-flex flex-column align-items-center @@if (context.page === 'parent') { active }">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <span>Parent</span>
+                            </a>
+                        </li>
 
-    <!-- Insert -->
-    <li class="nav-item">
-        <a class="nav-link text-white text-center @@if (context.page === 'insert') { active }" href="./Create.html">
-            <i class="bi bi-plus-circle-fill d-block mb-1" style="font-size: 1.5rem;"></i>
-            Insert
-        </a>
-    </li>
+                        <!-- Insert -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'insert') { active }"
+                                href="./Create.html">
+                                <i class="bi bi-plus-circle-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert
+                            </a>
+                        </li>
 
-    <!-- Insert Footer -->
-    <li class="nav-item">
-        <a class="nav-link text-white text-center @@if (context.page === 'insertFooter') { active }" href="./Create.html">
-            <i class="bi bi-building-add d-block mb-1" style="font-size: 1.5rem;"></i>
-            Insert Footer
-        </a>
-    </li>
+                        <!-- Insert Footer -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'insertFooter') { active }"
+                                href="./Create.html">
+                                <i class="bi bi-building-add d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert Footer
+                            </a>
+                        </li>
 
-    <!-- Show -->
-    <li class="nav-item">
-        <a class="nav-link text-white text-center @@if (context.page === 'show') { active }" href="./show.html">
-            <i class="bi bi-eye-fill d-block mb-1" style="font-size: 1.5rem;"></i>
-            Show
-        </a>
-    </li>
+                        <!-- Show -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'show') { active }"
+                                href="./show.html">
+                                <i class="bi bi-eye-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
+                            </a>
+                        </li>
 
-    <!-- Alter -->
-    <li class="nav-item">
-        <a class="nav-link text-white text-center @@if (context.page === 'alter') { active }" href="./Alter.html">
-            <i class="bi bi-pencil-square d-block mb-1" style="font-size: 1.5rem;"></i>
-            Alter
-        </a>
-    </li>
+                        <!-- Alter -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'alter') { active }"
+                                href="./Alter.html">
+                                <i class="bi bi-pencil-square d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Alter
+                            </a>
+                        </li>
 
-    <!-- Delete -->
-    <li class="nav-item">
-        <a class="nav-link text-white text-center @@if (context.page === 'delete') { active }" href="./Delete.html">
-            <i class="bi bi-x-circle-fill d-block mb-1" style="font-size: 1.5rem;"></i>
-            Delete
-        </a>
-    </li>
+                        <!-- Delete -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'delete') { active }"
+                                href="./Delete.html">
+                                <i class="bi bi-trash-fill d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Delete
+                            </a>
+                        </li>
 
-</ul>
+                    </ul>
 
 
                 </div>
             </div>
         </div>
 
-        <div class="px-5 mt-5"> 
-                    <h2 class="mb-2 fw-bold">Dashboard</h2>
+        <div class="px-5 mt-5">
+            <h2 class="mb-2 fw-bold">Dashboard</h2>
 
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                            <li class="breadcrumb-item"><a href="#">Update</a></li>
-                    </nav>
-                </div>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Update</a></li>
+            </nav>
+        </div>
 
     </header>
     <main>
