--- a/public/V2/Farmers/create.html
+++ b/public/V2/Farmers/create.html
@@ -113,18 +113,17 @@
             </div>
         </div>
 
-        <div class="px-5 mt-5">
-            <h2 class="mb-2 fw-bold">Dashboard</h2>
-
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Insert</a></li>
-            </nav>
-        </div>
+       
 
     </header>
     <main>
+         <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Insert <Footer></Footer></a></li>
+            </nav>
 
         <div class="container mt-5">
             <div class="card">
