--- a/public/V2/Farmers/delete.html
+++ b/public/V2/Farmers/delete.html
@@ -126,6 +126,7 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
+                     <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
                     <li class="breadcrumb-item"><a href="#">Farmers</a></li>
                     <li class="breadcrumb-item"><a href="#">Delete</a></li>
             </nav>
