--- a/public/V2/Farmers/Farmers.html
+++ b/public/V2/Farmers/Farmers.html
@@ -105,19 +105,18 @@
             </div>
         </div>
 
-        <div class="px-5 mt-5">
-            <h2 class="mb-2 fw-bold">Dashboard</h2>
-
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-            </nav>
-        </div>
+      
 
     </header>
     <main>
         <section class="py-5 mt-5">
             <div class="container">
+                <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                   
+            </nav>
                 <div class="row justify-content-center g-5">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
