--- a/public/V2/Farmers/show.html
+++ b/public/V2/Farmers/show.html
@@ -122,15 +122,7 @@
             </div>
         </div>
 
-        <div class="px-5 mt-5">
-            <h2 class="mb-2 fw-bold">Dashboard</h2>
 
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Show</a></li>
-            </nav>
-        </div>
 
     </header>
     <main>
@@ -148,6 +140,12 @@
             </a>
         </div>
         <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                    <li class="breadcrumb-item"><a href="#">Show</a></li>
+            </nav>
             <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
