--- a/public/V2/Farmers/Farmers.html
+++ b/public/V2/Farmers/Farmers.html
@@ -65,35 +65,35 @@
 
 
                         <a class="nav-link text-white text-center" href="./Create.html">
-                            <i class="bi bi-plus-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
                             Insert
                         </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert Footer
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Show
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Alter.html">
-                                <i class="bi bi-pencil-square text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -133,15 +133,15 @@
                                     <ul class="dropdown-menu w-75 shadow-sm start-0">
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="create.html">
-                                                <i class="bi bi-pencil-square text-primary me-3 fs-5"></i>
-                                                <span>Create</span>
+                                                <i class="bi bi-plus-circle-fill text-primary me-3 fs-5"></i>
+                                                <span>Insert</span>
                                             </a>
                                         </li>
                                         <li>
 
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="crud.html">
-                                                <i class="bi bi-building-add text-warning me-3 fs-5"></i>
+                                                <i class="bi bi-building-add text-info me-3 fs-5"></i>
                                                 <span>Insert Footer</span>
                                             </a>
                                         </li>
@@ -160,7 +160,7 @@
                                         </li>
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="./delete.html">
-                                                <i class="bi bi-x-circle-fill text-danger me-3 fs-5"></i>
+                                                <i class="bi bi-trash-fill text-danger me-3 fs-5"></i>
                                                 <span>Delete</span>
                                             </a>
                                         </li>
