--- a/public/V2/Farmers/alter.html
+++ b/public/V2/Farmers/alter.html
@@ -65,42 +65,40 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-white d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
+                            <a class="nav-link text-white text-center" href="./create.html">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert Footer
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Show
                             </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link bg-warning text-dark rounded text-center" href="./Alter.html">
-                                <i class="bi bi-pencil-square text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./alter.html">
+                                <i class="bi bi-pencil-square text-warning d-block mb-1 fs-4"></i>
                                 Alter
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
-
-
                     </ul>
                 </div>
             </div>
