--- a/public/V2/Farmers/crud.html
+++ b/public/V2/Farmers/crud.html
@@ -52,6 +52,7 @@
 
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+
                         <li>
                             <a href="../Farmers/Farmers.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
@@ -64,36 +65,39 @@
                                 <span>Parent</span>
                             </a>
                         </li>
-                        <a class="nav-link text-white text-center" href="./Create.html">
-                            <i class="bi bi-plus-circle-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
-                            Insert
-                        </a>
-                        </li>
 
                         <li class="nav-item">
-                            <a class="nav-link bg-warning text-dark rounded text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link text-white text-center" href="./create.html">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert
+                            </a>
+                        </li>
+
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./crud.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
                                 Insert Footer
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Show
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Alter.html">
-                                <i class="bi bi-pencil-square text-white d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Alter
+                            <a class="nav-link text-white text-center" href="./alter.html">
+                                <i class="bi bi-pencil-square  text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                               Alter
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-trash-fill text-white d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
