items also done

--- a/public/V2/Items/delete.html
+++ b/public/V2/Items/delete.html
@@ -51,7 +51,7 @@
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="./index.html" class="nav-link text-white text-center">
+                            <a href="./Items.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -70,6 +70,12 @@
                                     style="font-size: 1.5rem;"></i> Insert
                             </a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1"
+                                    style="font-size: 1.5rem;"></i> Insert Footer
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
@@ -81,9 +87,10 @@
                                 Alter
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./delete.html">
+                                <i class="bi bibi bi-trash-fill text-danger  d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -108,7 +115,13 @@
                 </svg>
             </a>
         </div>
-        <div class="container">
+        <div class="container"> <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Items</a></li>
+                    <li class="breadcrumb-item"><a href="#">Delete <Footer></Footer></a></li>
+            </nav>
             <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
