--- a/public/V2/Items/Items.html
+++ b/public/V2/Items/Items.html
@@ -38,18 +38,20 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
+
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -62,26 +64,36 @@
                         </li>
 
 
+                        <a class="nav-link text-white text-center" href="./Create.html">
+                            <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                            Insert
+                        </a>
+                        </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                            <a class="nav-link text-white text-center" href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert Footer
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Alter.html">
                                 <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -93,15 +105,24 @@
             </div>
         </div>
 
+      
+
     </header>
     <main>
         <section class="py-5 mt-5">
             <div class="container">
+                <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Items</a></li>
+                   
+            </nav>
                 <div class="row justify-content-center g-5">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
-                            <div class="card-header bg-gradient bg-warning text-dark text-center rounded-top-4">
-                                <h4 class="mb-0"><i class="bi bi-box-seam"></i>Items</h4>
+                            <div class="card-header bg-gradient bg-warning text-white text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-box-seam"></i> Items</h4>
+
                             </div>
                             <div class="card-body text-center">
                                 <div class="dropdown">
@@ -112,11 +133,20 @@
                                     <ul class="dropdown-menu w-75 shadow-sm start-0">
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="create.html">
-                                                <i class="bi bi-pencil-square text-primary me-3 fs-5"></i>
-                                                <span>Create</span>
+                                                <i class="bi bi-plus-circle-fill text-primary me-3 fs-5"></i>
+                                                <span>Insert</span>
                                             </a>
                                         </li>
                                         <li>
+
+                                        <li>
+                                            <a class="dropdown-item d-flex align-items-center" href="insertfooter.html">
+                                                <i class="bi bi-building-add text-info me-3 fs-5"></i>
+                                                <span>Insert Footer</span>
+                                            </a>
+                                        </li>
+                                        <li>
+
                                             <a class="dropdown-item d-flex align-items-center" href="./show.html">
                                                 <i class="bi bi-eye text-success me-3 fs-5"></i>
                                                 <span>Show</span>
@@ -130,7 +160,7 @@
                                         </li>
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="./delete.html">
-                                                <i class="bi bi-x-circle-fill text-danger me-3 fs-5"></i>
+                                                <i class="bi bi-trash-fill text-danger me-3 fs-5"></i>
                                                 <span>Delete</span>
                                             </a>
                                         </li>
