--- a/public/V2/Items/alter.html
+++ b/public/V2/Items/alter.html
@@ -50,7 +50,7 @@
                 </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="./items.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -70,20 +70,27 @@
                                     style="font-size: 1.5rem;"></i> Insert
                             </a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1"
+                                    style="font-size: 1.5rem;"></i> Insert footer
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./alter.html">
+                         <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./alter.html">
                                 <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bibi bi-trash-fill text-danger  d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -109,6 +116,13 @@
             </a>
         </div>
         <div class="container">
+             <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Items</a></li>
+                    <li class="breadcrumb-item"><a href="#">Alter <Footer></Footer></a></li>
+            </nav>
             <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
